// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`align.md 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
1. 123

---

11. 123

---

111. 123

---

1111. 123

---

11111. 123

---

1.  123

---

1.  123
2.  123

---

11. 123
1. 123

---

11. 123
1.  123

---

1. 123
2. 123
   1.   123
   2.   123

---

1.  123
2.  123
    1.   123
    2.   123

---

- 123
- 123
  1.  123
  2.  123

=====================================output=====================================
1. 123

---

11. 123

---

111. 123

---

1111. 123

---

11111. 123

---

1.  123

---

1.  123
2.  123

---

11. 123
1. 123

---

11. 123
1.  123

---

1. 123
2. 123
   1. 123
   2. 123

---

1.  123
2.  123
    1.  123
    2.  123

---

- 123
- 123
  1.  123
  2.  123

================================================================================
`;

exports[`align.md 2`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
1. 123

---

11. 123

---

111. 123

---

1111. 123

---

11111. 123

---

1.  123

---

1.  123
2.  123

---

11. 123
1. 123

---

11. 123
1.  123

---

1. 123
2. 123
   1.   123
   2.   123

---

1.  123
2.  123
    1.   123
    2.   123

---

- 123
- 123
  1.  123
  2.  123

=====================================output=====================================
1. 123

---

11. 123

---

111. 123

---

1111. 123

---

11111. 123

---

1.  123

---

1.  123
2.  123

---

11. 123
1. 123

---

11. 123
1.  123

---

1. 123
2. 123
    1. 123
    2. 123

---

1.  123
2.  123
    1.  123
    2.  123

---

-   123
-   123
    1.  123
    2.  123

================================================================================
`;

exports[`align.md 3`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
tabWidth: 999
                                                                                | printWidth
=====================================input======================================
1. 123

---

11. 123

---

111. 123

---

1111. 123

---

11111. 123

---

1.  123

---

1.  123
2.  123

---

11. 123
1. 123

---

11. 123
1.  123

---

1. 123
2. 123
   1.   123
   2.   123

---

1.  123
2.  123
    1.   123
    2.   123

---

- 123
- 123
  1.  123
  2.  123

=====================================output=====================================
1. 123

---

11. 123

---

111. 123

---

1111. 123

---

11111. 123

---

1. 123

---

1. 123
2. 123

---

11. 123
1. 123

---

11. 123
1. 123

---

1. 123
2. 123
      1. 123
      2. 123

---

1. 123
2. 123
      1. 123
      2. 123

---

- 123
- 123
     1. 123
     2. 123

================================================================================
`;

exports[`align.md 4`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
tabWidth: 0
                                                                                | printWidth
=====================================input======================================
1. 123

---

11. 123

---

111. 123

---

1111. 123

---

11111. 123

---

1.  123

---

1.  123
2.  123

---

11. 123
1. 123

---

11. 123
1.  123

---

1. 123
2. 123
   1.   123
   2.   123

---

1.  123
2.  123
    1.   123
    2.   123

---

- 123
- 123
  1.  123
  2.  123

=====================================output=====================================
1. 123

---

11. 123

---

111. 123

---

1111. 123

---

11111. 123

---

1. 123

---

1. 123
2. 123

---

11. 123
1. 123

---

11. 123
1. 123

---

1. 123
2. 123
   1. 123
   2. 123

---

1. 123
2. 123
   1. 123
   2. 123

---

- 123
- 123
  1. 123
  2. 123

================================================================================
`;

exports[`checkbox.md 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
- [ ] this is a long long long long long long long long long long long long long long paragraph.
- [x] this is a long long long long long long long long long long long long long long paragraph.

=====================================output=====================================
- [ ] this is a long long long long long long long long long long long long long
      long paragraph.
- [x] this is a long long long long long long long long long long long long long
      long paragraph.

================================================================================
`;

exports[`checkbox.md 2`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
- [ ] this is a long long long long long long long long long long long long long long paragraph.
- [x] this is a long long long long long long long long long long long long long long paragraph.

=====================================output=====================================
-   [ ] this is a long long long long long long long long long long long long
        long long paragraph.
-   [x] this is a long long long long long long long long long long long long
        long long paragraph.

================================================================================
`;

exports[`checkbox.md 3`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
tabWidth: 999
                                                                                | printWidth
=====================================input======================================
- [ ] this is a long long long long long long long long long long long long long long paragraph.
- [x] this is a long long long long long long long long long long long long long long paragraph.

=====================================output=====================================
- [ ] this is a long long long long long long long long long long long long long
      long paragraph.
- [x] this is a long long long long long long long long long long long long long
      long paragraph.

================================================================================
`;

exports[`checkbox.md 4`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
tabWidth: 0
                                                                                | printWidth
=====================================input======================================
- [ ] this is a long long long long long long long long long long long long long long paragraph.
- [x] this is a long long long long long long long long long long long long long long paragraph.

=====================================output=====================================
- [ ] this is a long long long long long long long long long long long long long
      long paragraph.
- [x] this is a long long long long long long long long long long long long long
      long paragraph.

================================================================================
`;

exports[`git-diff-friendly.md 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
5. abc
1. def
999. ghi

=====================================output=====================================
5. abc
1. def
1. ghi

================================================================================
`;

exports[`git-diff-friendly.md 2`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
5. abc
1. def
999. ghi

=====================================output=====================================
5. abc
1. def
1. ghi

================================================================================
`;

exports[`git-diff-friendly.md 3`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
tabWidth: 999
                                                                                | printWidth
=====================================input======================================
5. abc
1. def
999. ghi

=====================================output=====================================
5. abc
1. def
1. ghi

================================================================================
`;

exports[`git-diff-friendly.md 4`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
tabWidth: 0
                                                                                | printWidth
=====================================input======================================
5. abc
1. def
999. ghi

=====================================output=====================================
5. abc
1. def
1. ghi

================================================================================
`;

exports[`indent.md 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
- [ ] a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a

    - a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a

      b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b

    - [ ] a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a

      b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b

    1. a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a

       b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b

    1. [ ] a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a

       b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b

    12345678) a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a

              b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b

    12345678. [ ] a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a

              b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b

    a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a

1. [ ] a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a

    - a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a

      b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b

    - [ ] a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a

      b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b

    1. a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a

       b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b

    1. [ ] a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a

       b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b

    12345678) a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a

              b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b

    12345678. [ ] a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a

              b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b

    a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a

12345678) [ ] a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a

          b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b

          - a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a

            b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b

          - [ ] a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a

            b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b

          1. a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a

             b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b

          1. [ ] a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a

             b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b

          12345678) a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a

                    b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b

          12345678. [ ] a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a

                    b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b

          a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a

=====================================output=====================================
- [ ] a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a
      a a a a a a a a a a a a a a a

  - a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a
    a a a a a a a a a a a a a a

    b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b
    b b b b b b b b b b b b b b

  - [ ] a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a
        a a a a a a a a a a a a a a

    b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b
    b b b b b b b b b b b b b b

  1. a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a
     a a a a a a a a a a a a a a

     b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b
     b b b b b b b b b b b b b b

  1. [ ] a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a
         a a a a a a a a a a a a a a

     b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b
     b b b b b b b b b b b b b b

  12345678) a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a
            a a a a a a a a a a a a a a

            b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b
            b b b b b b b b b b b b b b

  12345678. [ ] a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a
                a a a a a a a a a a a a a a

            b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b
            b b b b b b b b b b b b b b

  a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a
  a a a a a a a a a a a a a a

1. [ ] a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a
       a a a a a a a a a a a a a a a

   - a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a
     a a a a a a a a a a a a a a

     b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b
     b b b b b b b b b b b b b b

   - [ ] a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a
         a a a a a a a a a a a a a a

     b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b
     b b b b b b b b b b b b b b

   1. a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a
      a a a a a a a a a a a a a a a

      b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b
      b b b b b b b b b b b b b b b

   1. [ ] a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a
          a a a a a a a a a a a a a a a

      b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b
      b b b b b b b b b b b b b b b

   12345678) a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a
             a a a a a a a a a a a a a a

             b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b
             b b b b b b b b b b b b b b

   12345678. [ ] a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a
                 a a a a a a a a a a a a a a

             b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b
             b b b b b b b b b b b b b b

   a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a
   a a a a a a a a a a a a a a

12345678) [ ] a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a
              a a a a a a a a a a a a a a a

          b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b
          b b b b b b b b b b b b b b b

          - a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a
            a a a a a a a a a a a a a a a

            b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b
            b b b b b b b b b b b b b b b

          - [ ] a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a
                a a a a a a a a a a a a a a a

            b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b
            b b b b b b b b b b b b b b b

          1. a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a
             a a a a a a a a a a a a a a a

             b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b
             b b b b b b b b b b b b b b b

          1. [ ] a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a
                 a a a a a a a a a a a a a a a

             b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b
             b b b b b b b b b b b b b b b

          12345678) a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a
                    a a a a a a a a a a a a a a a

                    b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b
                    b b b b b b b b b b b b b b b b

          12345678. [ ] a a a a a a a a a a a a a a a a a a a a a a a a a a a a
                        a a a a a a a a a a a a a a a

                    b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b
                    b b b b b b b b b b b b b b b b

          a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a
          a a a a a a a a a a a a a a a

================================================================================
`;

exports[`indent.md 2`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
- [ ] a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a

    - a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a

      b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b

    - [ ] a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a

      b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b

    1. a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a

       b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b

    1. [ ] a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a

       b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b

    12345678) a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a

              b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b

    12345678. [ ] a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a

              b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b

    a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a

1. [ ] a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a

    - a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a

      b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b

    - [ ] a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a

      b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b

    1. a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a

       b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b

    1. [ ] a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a

       b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b

    12345678) a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a

              b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b

    12345678. [ ] a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a

              b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b

    a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a

12345678) [ ] a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a

          b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b

          - a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a

            b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b

          - [ ] a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a

            b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b

          1. a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a

             b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b

          1. [ ] a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a

             b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b

          12345678) a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a

                    b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b

          12345678. [ ] a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a

                    b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b

          a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a

=====================================output=====================================
-   [ ] a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a
        a a a a a a a a a a a a a a a a

    -   a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a
        a a a a a a a a a a a a a a a a

        b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b
        b b b b b b b b b b b b b b b b

    -   [ ] a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a
            a a a a a a a a a a a a a a a a

        b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b
        b b b b b b b b b b b b b b b b

    1. a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a
       a a a a a a a a a a a a a a a

        b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b
        b b b b b b b b b b b b b b b b

    1. [ ] a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a
           a a a a a a a a a a a a a a a

        b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b
        b b b b b b b b b b b b b b b b

    12345678) a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a
              a a a a a a a a a a a a a a a

              b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b
              b b b b b b b b b b b b b b b

    12345678. [ ] a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a
                  a a a a a a a a a a a a a a a

              b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b
              b b b b b b b b b b b b b b b

    a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a
    a a a a a a a a a a a a a a a

1. [ ] a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a
       a a a a a a a a a a a a a a a

    - a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a
      a a a a a a a a a a a a a a a

        b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b
        b b b b b b b b b b b b b b b b

    - [ ] a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a
          a a a a a a a a a a a a a a a

        b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b
        b b b b b b b b b b b b b b b b

    1. a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a
       a a a a a a a a a a a a a a a

        b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b
        b b b b b b b b b b b b b b b b

    1. [ ] a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a
           a a a a a a a a a a a a a a a

        b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b
        b b b b b b b b b b b b b b b b

    12345678) a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a
              a a a a a a a a a a a a a a a

              b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b
              b b b b b b b b b b b b b b b

    12345678. [ ] a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a
                  a a a a a a a a a a a a a a a

              b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b
              b b b b b b b b b b b b b b b

    a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a
    a a a a a a a a a a a a a a a

12345678) [ ] a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a
              a a a a a a a a a a a a a a a

          b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b
          b b b b b b b b b b b b b b b

          - a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a
            a a a a a a a a a a a a a a a

              b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b
              b b b b b b b b b b b b b b b b

          - [ ] a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a
                a a a a a a a a a a a a a a a

              b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b
              b b b b b b b b b b b b b b b b

          1. a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a
             a a a a a a a a a a a a a a a

              b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b
              b b b b b b b b b b b b b b b b

          1. [ ] a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a
                 a a a a a a a a a a a a a a a

              b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b
              b b b b b b b b b b b b b b b b

          12345678) a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a
                    a a a a a a a a a a a a a a a

                    b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b
                    b b b b b b b b b b b b b b b b

          12345678. [ ] a a a a a a a a a a a a a a a a a a a a a a a a a a a a
                        a a a a a a a a a a a a a a a

                    b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b
                    b b b b b b b b b b b b b b b b

          a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a
          a a a a a a a a a a a a a a a

================================================================================
`;

exports[`indent.md 3`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
tabWidth: 999
                                                                                | printWidth
=====================================input======================================
- [ ] a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a

    - a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a

      b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b

    - [ ] a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a

      b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b

    1. a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a

       b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b

    1. [ ] a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a

       b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b

    12345678) a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a

              b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b

    12345678. [ ] a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a

              b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b

    a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a

1. [ ] a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a

    - a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a

      b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b

    - [ ] a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a

      b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b

    1. a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a

       b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b

    1. [ ] a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a

       b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b

    12345678) a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a

              b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b

    12345678. [ ] a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a

              b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b

    a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a

12345678) [ ] a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a

          b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b

          - a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a

            b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b

          - [ ] a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a

            b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b

          1. a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a

             b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b

          1. [ ] a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a

             b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b

          12345678) a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a

                    b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b

          12345678. [ ] a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a

                    b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b

          a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a

=====================================output=====================================
- [ ] a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a
      a a a a a a a a a a a a a a a

     - a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a
       a a a a a a a a a a a a a a a

          b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b
          b b b b b b b b b b b b b b b b b

     - [ ] a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a
           a a a a a a a a a a a a a a a

          b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b
          b b b b b b b b b b b b b b b b b

     1. a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a
        a a a a a a a a a a a a a a a a

           b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b
           b b b b b b b b b b b b b b b b b

     1. [ ] a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a
            a a a a a a a a a a a a a a a a

           b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b
           b b b b b b b b b b b b b b b b b

     12345678) a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a
               a a a a a a a a a a a a a a a

                  b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b
                  b b b b b b b b b b b b b b b b b

     12345678. [ ] a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a
                   a a a a a a a a a a a a a a a

                  b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b
                  b b b b b b b b b b b b b b b b b

     a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a
     a a a a a a a a a a a a a a a

1. [ ] a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a
       a a a a a a a a a a a a a a a

      - a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a
        a a a a a a a a a a a a a a a a

           b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b
           b b b b b b b b b b b b b b b b b

      - [ ] a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a
            a a a a a a a a a a a a a a a a

           b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b
           b b b b b b b b b b b b b b b b b

      1. a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a
         a a a a a a a a a a a a a a a a

            b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b
            b b b b b b b b b b b b b b b b b b

      1. [ ] a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a
             a a a a a a a a a a a a a a a a

            b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b
            b b b b b b b b b b b b b b b b b b

      12345678) a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a
                a a a a a a a a a a a a a a a a

                   b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b
                   b b b b b b b b b b b b b b b b b

      12345678. [ ] a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a
                    a a a a a a a a a a a a a a a a

                   b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b
                   b b b b b b b b b b b b b b b b b

      a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a
      a a a a a a a a a a a a a a a a

12345678) [ ] a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a
              a a a a a a a a a a a a a a a

             b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b
             b b b b b b b b b b b b b b b b

             - a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a
               a a a a a a a a a a a a a a a a

                  b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b
                  b b b b b b b b b b b b b b b b b b

             - [ ] a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a
                   a a a a a a a a a a a a a a a a

                  b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b
                  b b b b b b b b b b b b b b b b b b

             1. a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a
                a a a a a a a a a a a a a a a a a

                   b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b
                   b b b b b b b b b b b b b b b b b b

             1. [ ] a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a
                    a a a a a a a a a a a a a a a a a

                   b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b
                   b b b b b b b b b b b b b b b b b b

             12345678) a a a a a a a a a a a a a a a a a a a a a a a a a a a a a
                       a a a a a a a a a a a a a a a a

                          b b b b b b b b b b b b b b b b b b b b b b b b b b b
                          b b b b b b b b b b b b b b b b b b b

             12345678. [ ] a a a a a a a a a a a a a a a a a a a a a a a a a a a
                           a a a a a a a a a a a a a a a a

                          b b b b b b b b b b b b b b b b b b b b b b b b b b b
                          b b b b b b b b b b b b b b b b b b b

             a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a
             a a a a a a a a a a a a a a a a

================================================================================
`;

exports[`indent.md 4`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
tabWidth: 0
                                                                                | printWidth
=====================================input======================================
- [ ] a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a

    - a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a

      b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b

    - [ ] a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a

      b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b

    1. a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a

       b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b

    1. [ ] a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a

       b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b

    12345678) a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a

              b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b

    12345678. [ ] a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a

              b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b

    a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a

1. [ ] a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a

    - a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a

      b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b

    - [ ] a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a

      b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b

    1. a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a

       b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b

    1. [ ] a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a

       b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b

    12345678) a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a

              b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b

    12345678. [ ] a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a

              b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b

    a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a

12345678) [ ] a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a

          b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b

          - a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a

            b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b

          - [ ] a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a

            b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b

          1. a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a

             b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b

          1. [ ] a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a

             b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b

          12345678) a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a

                    b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b

          12345678. [ ] a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a

                    b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b

          a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a

=====================================output=====================================
- [ ] a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a
      a a a a a a a a a a a a a a a

  - a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a
    a a a a a a a a a a a a a a

    b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b
    b b b b b b b b b b b b b b

  - [ ] a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a
        a a a a a a a a a a a a a a

    b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b
    b b b b b b b b b b b b b b

  1. a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a
     a a a a a a a a a a a a a a

     b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b
     b b b b b b b b b b b b b b

  1. [ ] a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a
         a a a a a a a a a a a a a a

     b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b
     b b b b b b b b b b b b b b

  12345678) a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a
            a a a a a a a a a a a a a a

            b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b
            b b b b b b b b b b b b b b

  12345678. [ ] a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a
                a a a a a a a a a a a a a a

            b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b
            b b b b b b b b b b b b b b

  a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a
  a a a a a a a a a a a a a a

1. [ ] a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a
       a a a a a a a a a a a a a a a

   - a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a
     a a a a a a a a a a a a a a

     b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b
     b b b b b b b b b b b b b b

   - [ ] a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a
         a a a a a a a a a a a a a a

     b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b
     b b b b b b b b b b b b b b

   1. a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a
      a a a a a a a a a a a a a a a

      b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b
      b b b b b b b b b b b b b b b

   1. [ ] a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a
          a a a a a a a a a a a a a a a

      b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b
      b b b b b b b b b b b b b b b

   12345678) a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a
             a a a a a a a a a a a a a a

             b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b
             b b b b b b b b b b b b b b

   12345678. [ ] a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a
                 a a a a a a a a a a a a a a

             b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b
             b b b b b b b b b b b b b b

   a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a
   a a a a a a a a a a a a a a

12345678) [ ] a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a
              a a a a a a a a a a a a a a a

          b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b
          b b b b b b b b b b b b b b b

          - a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a
            a a a a a a a a a a a a a a a

            b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b
            b b b b b b b b b b b b b b b

          - [ ] a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a
                a a a a a a a a a a a a a a a

            b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b
            b b b b b b b b b b b b b b b

          1. a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a
             a a a a a a a a a a a a a a a

             b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b
             b b b b b b b b b b b b b b b

          1. [ ] a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a
                 a a a a a a a a a a a a a a a

             b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b
             b b b b b b b b b b b b b b b

          12345678) a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a
                    a a a a a a a a a a a a a a a

                    b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b
                    b b b b b b b b b b b b b b b b

          12345678. [ ] a a a a a a a a a a a a a a a a a a a a a a a a a a a a
                        a a a a a a a a a a a a a a a

                    b b b b b b b b b b b b b b b b b b b b b b b b b b b b b b
                    b b b b b b b b b b b b b b b b

          a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a
          a a a a a a a a a a a a a a a

================================================================================
`;

exports[`interrupt.md 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
* Something
### Some heading

=====================================output=====================================
- Something

### Some heading

================================================================================
`;

exports[`interrupt.md 2`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
* Something
### Some heading

=====================================output=====================================
-   Something

### Some heading

================================================================================
`;

exports[`interrupt.md 3`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
tabWidth: 999
                                                                                | printWidth
=====================================input======================================
* Something
### Some heading

=====================================output=====================================
- Something

### Some heading

================================================================================
`;

exports[`interrupt.md 4`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
tabWidth: 0
                                                                                | printWidth
=====================================input======================================
* Something
### Some heading

=====================================output=====================================
- Something

### Some heading

================================================================================
`;

exports[`long-paragraph.md 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
- This is a long long long long long long long long long long long long long long paragraph.

=====================================output=====================================
- This is a long long long long long long long long long long long long long
  long paragraph.

================================================================================
`;

exports[`long-paragraph.md 2`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
- This is a long long long long long long long long long long long long long long paragraph.

=====================================output=====================================
-   This is a long long long long long long long long long long long long long
    long paragraph.

================================================================================
`;

exports[`long-paragraph.md 3`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
tabWidth: 999
                                                                                | printWidth
=====================================input======================================
- This is a long long long long long long long long long long long long long long paragraph.

=====================================output=====================================
- This is a long long long long long long long long long long long long long
  long paragraph.

================================================================================
`;

exports[`long-paragraph.md 4`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
tabWidth: 0
                                                                                | printWidth
=====================================input======================================
- This is a long long long long long long long long long long long long long long paragraph.

=====================================output=====================================
- This is a long long long long long long long long long long long long long
  long paragraph.

================================================================================
`;

exports[`loose.md 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
- 123

  - abc

- 456

  - def

- 789

  - ghi

=====================================output=====================================
- 123

  - abc

- 456

  - def

- 789

  - ghi

================================================================================
`;

exports[`loose.md 2`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
- 123

  - abc

- 456

  - def

- 789

  - ghi

=====================================output=====================================
-   123

    -   abc

-   456

    -   def

-   789

    -   ghi

================================================================================
`;

exports[`loose.md 3`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
tabWidth: 999
                                                                                | printWidth
=====================================input======================================
- 123

  - abc

- 456

  - def

- 789

  - ghi

=====================================output=====================================
- 123

     - abc

- 456

     - def

- 789

     - ghi

================================================================================
`;

exports[`loose.md 4`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
tabWidth: 0
                                                                                | printWidth
=====================================input======================================
- 123

  - abc

- 456

  - def

- 789

  - ghi

=====================================output=====================================
- 123

  - abc

- 456

  - def

- 789

  - ghi

================================================================================
`;

exports[`multiline.md 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
- 123
  456
  789

=====================================output=====================================
- 123 456 789

================================================================================
`;

exports[`multiline.md 2`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
- 123
  456
  789

=====================================output=====================================
-   123 456 789

================================================================================
`;

exports[`multiline.md 3`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
tabWidth: 999
                                                                                | printWidth
=====================================input======================================
- 123
  456
  789

=====================================output=====================================
- 123 456 789

================================================================================
`;

exports[`multiline.md 4`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
tabWidth: 0
                                                                                | printWidth
=====================================input======================================
- 123
  456
  789

=====================================output=====================================
- 123 456 789

================================================================================
`;

exports[`nested.md 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
- Level 1
  - Level 2
    - Level 3

=====================================output=====================================
- Level 1
  - Level 2
    - Level 3

================================================================================
`;

exports[`nested.md 2`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
- Level 1
  - Level 2
    - Level 3

=====================================output=====================================
-   Level 1
    -   Level 2
        -   Level 3

================================================================================
`;

exports[`nested.md 3`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
tabWidth: 999
                                                                                | printWidth
=====================================input======================================
- Level 1
  - Level 2
    - Level 3

=====================================output=====================================
- Level 1
     - Level 2
          - Level 3

================================================================================
`;

exports[`nested.md 4`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
tabWidth: 0
                                                                                | printWidth
=====================================input======================================
- Level 1
  - Level 2
    - Level 3

=====================================output=====================================
- Level 1
  - Level 2
    - Level 3

================================================================================
`;

exports[`nested-checkbox.md 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
* parent list item parent list item parent list item parent list item parent list item parent list item

     * child list item child list item child list item child list item child list item child list item

    paragraph paragraph paragraph paragraph paragraph paragraph paragraph paragraph paragraph

* [x] parent task list item parent task list item parent task list item parent task list item

     * [x] child task list item child task list item child task list item child task list item

    paragraph paragraph paragraph paragraph paragraph paragraph paragraph paragraph paragraph

=====================================output=====================================
- parent list item parent list item parent list item parent list item parent
  list item parent list item

  - child list item child list item child list item child list item child list
    item child list item

  paragraph paragraph paragraph paragraph paragraph paragraph paragraph
  paragraph paragraph

- [x] parent task list item parent task list item parent task list item parent
      task list item

  - [x] child task list item child task list item child task list item child
        task list item

  paragraph paragraph paragraph paragraph paragraph paragraph paragraph
  paragraph paragraph

================================================================================
`;

exports[`nested-checkbox.md 2`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
* parent list item parent list item parent list item parent list item parent list item parent list item

     * child list item child list item child list item child list item child list item child list item

    paragraph paragraph paragraph paragraph paragraph paragraph paragraph paragraph paragraph

* [x] parent task list item parent task list item parent task list item parent task list item

     * [x] child task list item child task list item child task list item child task list item

    paragraph paragraph paragraph paragraph paragraph paragraph paragraph paragraph paragraph

=====================================output=====================================
-   parent list item parent list item parent list item parent list item parent
    list item parent list item

    -   child list item child list item child list item child list item child
        list item child list item

    paragraph paragraph paragraph paragraph paragraph paragraph paragraph
    paragraph paragraph

-   [x] parent task list item parent task list item parent task list item parent
        task list item

    -   [x] child task list item child task list item child task list item child
            task list item

    paragraph paragraph paragraph paragraph paragraph paragraph paragraph
    paragraph paragraph

================================================================================
`;

exports[`nested-checkbox.md 3`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
tabWidth: 999
                                                                                | printWidth
=====================================input======================================
* parent list item parent list item parent list item parent list item parent list item parent list item

     * child list item child list item child list item child list item child list item child list item

    paragraph paragraph paragraph paragraph paragraph paragraph paragraph paragraph paragraph

* [x] parent task list item parent task list item parent task list item parent task list item

     * [x] child task list item child task list item child task list item child task list item

    paragraph paragraph paragraph paragraph paragraph paragraph paragraph paragraph paragraph

=====================================output=====================================
- parent list item parent list item parent list item parent list item parent
  list item parent list item

     - child list item child list item child list item child list item child
       list item child list item

     paragraph paragraph paragraph paragraph paragraph paragraph paragraph
     paragraph paragraph

- [x] parent task list item parent task list item parent task list item parent
      task list item

     - [x] child task list item child task list item child task list item child
           task list item

     paragraph paragraph paragraph paragraph paragraph paragraph paragraph
     paragraph paragraph

================================================================================
`;

exports[`nested-checkbox.md 4`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
tabWidth: 0
                                                                                | printWidth
=====================================input======================================
* parent list item parent list item parent list item parent list item parent list item parent list item

     * child list item child list item child list item child list item child list item child list item

    paragraph paragraph paragraph paragraph paragraph paragraph paragraph paragraph paragraph

* [x] parent task list item parent task list item parent task list item parent task list item

     * [x] child task list item child task list item child task list item child task list item

    paragraph paragraph paragraph paragraph paragraph paragraph paragraph paragraph paragraph

=====================================output=====================================
- parent list item parent list item parent list item parent list item parent
  list item parent list item

  - child list item child list item child list item child list item child list
    item child list item

  paragraph paragraph paragraph paragraph paragraph paragraph paragraph
  paragraph paragraph

- [x] parent task list item parent task list item parent task list item parent
      task list item

  - [x] child task list item child task list item child task list item child
        task list item

  paragraph paragraph paragraph paragraph paragraph paragraph paragraph
  paragraph paragraph

================================================================================
`;

exports[`ordered.md 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
1. 123
1. 456
1. 789

=====================================output=====================================
1. 123
1. 456
1. 789

================================================================================
`;

exports[`ordered.md 2`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
1. 123
1. 456
1. 789

=====================================output=====================================
1. 123
1. 456
1. 789

================================================================================
`;

exports[`ordered.md 3`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
tabWidth: 999
                                                                                | printWidth
=====================================input======================================
1. 123
1. 456
1. 789

=====================================output=====================================
1. 123
1. 456
1. 789

================================================================================
`;

exports[`ordered.md 4`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
tabWidth: 0
                                                                                | printWidth
=====================================input======================================
1. 123
1. 456
1. 789

=====================================output=====================================
1. 123
1. 456
1. 789

================================================================================
`;

exports[`redundant-leading-spaces.md 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
- a  
   b  
    c  
   d  
  e

-   a  
   b  
  c  
   d  
    e

1. a  
   b  
    c  
   d  
  e

1.  a  
   b  
  c  
   d  
    e

=====================================output=====================================
- a  
  b  
  c  
  d  
  e

- a  
  b  
  c  
  d  
  e

1. a  
   b  
   c  
   d  
   e

1. a  
   b  
   c  
   d  
   e

================================================================================
`;

exports[`redundant-leading-spaces.md 2`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
- a  
   b  
    c  
   d  
  e

-   a  
   b  
  c  
   d  
    e

1. a  
   b  
    c  
   d  
  e

1.  a  
   b  
  c  
   d  
    e

=====================================output=====================================
-   a  
    b  
    c  
    d  
    e

-   a  
    b  
    c  
    d  
    e

1. a  
   b  
   c  
   d  
   e

1. a  
   b  
   c  
   d  
   e

================================================================================
`;

exports[`redundant-leading-spaces.md 3`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
tabWidth: 999
                                                                                | printWidth
=====================================input======================================
- a  
   b  
    c  
   d  
  e

-   a  
   b  
  c  
   d  
    e

1. a  
   b  
    c  
   d  
  e

1.  a  
   b  
  c  
   d  
    e

=====================================output=====================================
- a  
  b  
  c  
  d  
  e

- a  
  b  
  c  
  d  
  e

1. a  
   b  
   c  
   d  
   e

1. a  
   b  
   c  
   d  
   e

================================================================================
`;

exports[`redundant-leading-spaces.md 4`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
tabWidth: 0
                                                                                | printWidth
=====================================input======================================
- a  
   b  
    c  
   d  
  e

-   a  
   b  
  c  
   d  
    e

1. a  
   b  
    c  
   d  
  e

1.  a  
   b  
  c  
   d  
    e

=====================================output=====================================
- a  
  b  
  c  
  d  
  e

- a  
  b  
  c  
  d  
  e

1. a  
   b  
   c  
   d  
   e

1. a  
   b  
   c  
   d  
   e

================================================================================
`;

exports[`separate.md 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
- 123
- 123
- 123

* 123
* 123
* 123

=====================================output=====================================
- 123
- 123
- 123

* 123
* 123
* 123

================================================================================
`;

exports[`separate.md 2`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
- 123
- 123
- 123

* 123
* 123
* 123

=====================================output=====================================
-   123
-   123
-   123

*   123
*   123
*   123

================================================================================
`;

exports[`separate.md 3`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
tabWidth: 999
                                                                                | printWidth
=====================================input======================================
- 123
- 123
- 123

* 123
* 123
* 123

=====================================output=====================================
- 123
- 123
- 123

* 123
* 123
* 123

================================================================================
`;

exports[`separate.md 4`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
tabWidth: 0
                                                                                | printWidth
=====================================input======================================
- 123
- 123
- 123

* 123
* 123
* 123

=====================================output=====================================
- 123
- 123
- 123

* 123
* 123
* 123

================================================================================
`;

exports[`simple.md 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
- 123
- 456
- 789

=====================================output=====================================
- 123
- 456
- 789

================================================================================
`;

exports[`simple.md 2`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
- 123
- 456
- 789

=====================================output=====================================
-   123
-   456
-   789

================================================================================
`;

exports[`simple.md 3`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
tabWidth: 999
                                                                                | printWidth
=====================================input======================================
- 123
- 456
- 789

=====================================output=====================================
- 123
- 456
- 789

================================================================================
`;

exports[`simple.md 4`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
tabWidth: 0
                                                                                | printWidth
=====================================input======================================
- 123
- 456
- 789

=====================================output=====================================
- 123
- 456
- 789

================================================================================
`;

exports[`start.md 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
5. abc
6. def
7. ghi

---

0. abc
0. def
0. ghi

---

1. abc
1. def
1. ghi

---

2. abc
2. def
2. ghi

---

0. abc
1. def
2. ghi

---

0. abc
1. def
1. ghi

---

1. abc
2. def
3. ghi

---

2. abc
3. def
4. ghi

---

999. abc
145. def
69. ghi

---

0. abc

---

1. abc

---

2. abc

---

999. abc

---

0. abc
1. def

---

1. abc
2. def

---


1. abc
1. def

---

2. abc
3. def

---

999. abc
1. def

---

999. abc
2. def

=====================================output=====================================
5. abc
6. def
7. ghi

---

0. abc
1. def
2. ghi

---

1. abc
1. def
1. ghi

---

2. abc
3. def
4. ghi

---

0. abc
1. def
2. ghi

---

0. abc
1. def
1. ghi

---

1. abc
2. def
3. ghi

---

2. abc
3. def
4. ghi

---

999. abc
1000. def
1001. ghi

---

0. abc

---

1. abc

---

2. abc

---

999. abc

---

0. abc
1. def

---

1. abc
2. def

---

1. abc
1. def

---

2. abc
3. def

---

999. abc
1. def

---

999. abc
1000. def

================================================================================
`;

exports[`start.md 2`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
5. abc
6. def
7. ghi

---

0. abc
0. def
0. ghi

---

1. abc
1. def
1. ghi

---

2. abc
2. def
2. ghi

---

0. abc
1. def
2. ghi

---

0. abc
1. def
1. ghi

---

1. abc
2. def
3. ghi

---

2. abc
3. def
4. ghi

---

999. abc
145. def
69. ghi

---

0. abc

---

1. abc

---

2. abc

---

999. abc

---

0. abc
1. def

---

1. abc
2. def

---


1. abc
1. def

---

2. abc
3. def

---

999. abc
1. def

---

999. abc
2. def

=====================================output=====================================
5. abc
6. def
7. ghi

---

0. abc
1. def
2. ghi

---

1. abc
1. def
1. ghi

---

2. abc
3. def
4. ghi

---

0. abc
1. def
2. ghi

---

0. abc
1. def
1. ghi

---

1. abc
2. def
3. ghi

---

2. abc
3. def
4. ghi

---

999. abc
1000. def
1001. ghi

---

0. abc

---

1. abc

---

2. abc

---

999. abc

---

0. abc
1. def

---

1. abc
2. def

---

1. abc
1. def

---

2. abc
3. def

---

999. abc
1. def

---

999. abc
1000. def

================================================================================
`;

exports[`start.md 3`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
tabWidth: 999
                                                                                | printWidth
=====================================input======================================
5. abc
6. def
7. ghi

---

0. abc
0. def
0. ghi

---

1. abc
1. def
1. ghi

---

2. abc
2. def
2. ghi

---

0. abc
1. def
2. ghi

---

0. abc
1. def
1. ghi

---

1. abc
2. def
3. ghi

---

2. abc
3. def
4. ghi

---

999. abc
145. def
69. ghi

---

0. abc

---

1. abc

---

2. abc

---

999. abc

---

0. abc
1. def

---

1. abc
2. def

---


1. abc
1. def

---

2. abc
3. def

---

999. abc
1. def

---

999. abc
2. def

=====================================output=====================================
5. abc
6. def
7. ghi

---

0. abc
1. def
2. ghi

---

1. abc
1. def
1. ghi

---

2. abc
3. def
4. ghi

---

0. abc
1. def
2. ghi

---

0. abc
1. def
1. ghi

---

1. abc
2. def
3. ghi

---

2. abc
3. def
4. ghi

---

999. abc
1000. def
1001. ghi

---

0. abc

---

1. abc

---

2. abc

---

999. abc

---

0. abc
1. def

---

1. abc
2. def

---

1. abc
1. def

---

2. abc
3. def

---

999. abc
1. def

---

999. abc
1000. def

================================================================================
`;

exports[`start.md 4`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
tabWidth: 0
                                                                                | printWidth
=====================================input======================================
5. abc
6. def
7. ghi

---

0. abc
0. def
0. ghi

---

1. abc
1. def
1. ghi

---

2. abc
2. def
2. ghi

---

0. abc
1. def
2. ghi

---

0. abc
1. def
1. ghi

---

1. abc
2. def
3. ghi

---

2. abc
3. def
4. ghi

---

999. abc
145. def
69. ghi

---

0. abc

---

1. abc

---

2. abc

---

999. abc

---

0. abc
1. def

---

1. abc
2. def

---


1. abc
1. def

---

2. abc
3. def

---

999. abc
1. def

---

999. abc
2. def

=====================================output=====================================
5. abc
6. def
7. ghi

---

0. abc
1. def
2. ghi

---

1. abc
1. def
1. ghi

---

2. abc
3. def
4. ghi

---

0. abc
1. def
2. ghi

---

0. abc
1. def
1. ghi

---

1. abc
2. def
3. ghi

---

2. abc
3. def
4. ghi

---

999. abc
1000. def
1001. ghi

---

0. abc

---

1. abc

---

2. abc

---

999. abc

---

0. abc
1. def

---

1. abc
2. def

---

1. abc
1. def

---

2. abc
3. def

---

999. abc
1. def

---

999. abc
1000. def

================================================================================
`;
